--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "gridsome build"
   },
   "dependencies": {
+    "@gridsome/source-contentful": "^0.6.0",
     "gridsome": "^0.7.0"
   }
 }
